fix overwflow on small desktop displays

--- a/css/style_item.css
+++ b/css/style_item.css
@@ -2,7 +2,8 @@
 .item_flex_container {
     display: grid;
     grid-template-columns: 2fr 5fr;
-    width: 1800px;
+    width: 100vw;
+    max-width: 1450px;
     margin: auto;
 }
 
@@ -46,7 +47,7 @@
     flex-wrap: wrap;
     justify-content: start;
     align-content: center;
-    width: 1100px;
+    width: 100%;
 }
 .single_colour{
     display: flex;
